2005-09-10 Philippe April  <philippe@ilesansfil.org>
	* signup.php: Fixed bug in detecting is the user is already part of the
	network.
	* classes/{Authenticator,Network,Node}.php: isset, and issues preventing
	users from logging out.
	* add BASEPATH to most files with require_once
	* Added dependency checking class

2005-09-10 Francois Proulx <francois.proulx@gmail.com>
	* Automatically redirect user to login form when trying to access admin
	* Added various isset, empty tests, vars init in stats (to avoid php warning)

2005-09-08 Philippe April  <philippe@ilesansfil.org>
	* New stats system with graphs
	* Changed the UI a bit to reflect this change
	* Updated stylesheet

2005-09-08 Benoit Grégoire  <bock@step.polymtl.ca>
	* portal/index.php:  Custom portal redirect now operational.
	
2005-09-08 Benoit Grégoire  <bock@step.polymtl.ca>
	* MainUI:  Move call to garbage_collect() here.
	* portal/index.php:  New feature:  Custom portal redirect.
	* rework much of the logout code
	
2005-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* login/index.php:  Fix getSplashOnlyUser() method call.

2005-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* RssPressReview.php:  Fix z-index so the hovers will overlap the expanded news.
	* login/index.php:  Reorganise code to make it more legible and comment what it does.  
	Emphasise error messages and put them right above where they clicked so users can actually see them.  
	* Security.php:  Remove deprecated login code
	* Authenticator.php: Change calling convention for better encapsulation
	* New feature:  Support multiple simultaneous logins if enabled in network configuration
	* New feature (in testing): Splash-only node support
	  
2005-09-05 Benoit Grégoire  <bock@step.polymtl.ca>
	* include/common.php:  Add code to undo the effect of magic_quote if enabled in the server config.  It is still strongly recommended to disable magic_quote
	* Node.php:  Add UI for splash only node and custom portal
	* Update schema
	